<resources>
    <string name="app_name">ToolsKart</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_mobile">Email ID/Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="next">NEXT</string>
    <string name="sign_in_as_guest">Sign In as Guest User</string>
    <string name="email">Email ID</string>
    <string name="mobile">Mobile Number</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_mobile">Verify your mobile number</string>
    <string name="enter_otp">Enter your OTP Code here</string>
    <string name="confirm">CONFIRM</string>
    <string name="resend">RESEND</string>
    <string name="dint_receive">I didn\'t receive it.</string>
    <string name="no_result_found">No data found</string>
    <string name="refresh">Refresh</string>
    <string name="woops_something_went_wrong">Woops something went wrong.</string>
    <string name="retry">Retry</string>
    <string name="featured_products">Featured Products</string>
    <string name="offers_and_deals"><![CDATA[Offer & Deals]]></string>
    <string name="hot_categories">Hot Categories</string>
    <string name="search_products">Search Products</string>
    <string name="product_title_name">POWERWash High</string>
    <string name="rs">\u20A8</string>
    <string name="lorem_long_text">Office Supplies</string>
    <string name="product_dummy_name">Kavinstar PrimeCurrency Machine - KAVINSTAR</string>
    <string name="delivery_dummy_date">Delivery by</string>
    <string name="delivery_dummy_date_text">Wednesday 19 jul 2018</string>

    <string name="product_price">1499</string>
    <string name="product_price_selected_text">(Special Price)</string>
    <string name="rating">3.5</string>
    <string name="dummy_text">(200)</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="tx_rating">Rating</string>
    <string name="write_review">Write a review</string>
    <string name="dummy_rating_text">146</string>
    <string name="text">5 Star</string>
    <string name="percentage">50%</string>
    <string name="all_reviews_text">All Reviews</string>
    <string name="cadidate_name">Vani Gupta</string>
    <string name="dummy_date">06/07/2018</string>
    <string name="verification_text">Verified Purchase</string>
    <string name="dummy_explanation">abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz</string>
    <string name="saving_text">You Save Rs.</string>
    <string name="tx_by">Unbrako</string>
    <string name="by">by</string>
    <string name="offer">50% OFF</string>
    <string name="similar_products">See similar products</string>
    <string name="dots">:</string>
    <string name="tx_order_id">Order ID</string>
    <string name="order_id">NH5GT5423G</string>
    <string name="tx_quantity">Quantity</string>
    <string name="quantity">5</string>
    <string name="tx_placed_on">Placed on</string>
    <string name="date">27-11-2018</string>
    <string name="tx_status">Status</string>
    <string name="status">Placed</string>
    <string name="estimate_delivery">Estimated Delivery</string>
    <string name="tx_cancel">CANCEL</string>
    <string name="tx_order_detail">Order Detail</string>
    <string name="tx_order_date">Order Date</string>
    <string name="tx_order_total">Order Total</string>
    <string name="tx_payment_information">Payment information</string>
    <string name="tx_payment_method">Payment Method</string>
    <string name="tx_pay_on_delivery">Pay On Delivery(POD)</string>
    <string name="tx_total">Total</string>
    <string name="tx_shipping">Shipping</string>
    <string name="tx_shipping_address">Shipping Address</string>
    <string name="tx_dummy_address">Mark Kofit</string>
    <string name="tx_cancel_order">CANCEL  ORDER</string>
    <string name="tx_return">RETURN</string>
    <string name="tx_deliver_to_this_address">DELIVER TO THIS ADDRESS</string>
    <string name="tx_edit">EDIT</string>
    <string name="tx_delete">DELETE</string>
    <string name="tx_add_address">Add  a new address</string>
    <string name="tx_name">Name</string>
    <string name="tx_phone_number">Phone Number</string>
    <string name="tx_address">Address</string>
    <string name="tx_pin_code">Pin code</string>
    <string name="tx_save">SAVE</string>
    <string name="tx_mobile_number">Mobile Number</string>
    <string name="mobile_number_tx">+971 44552211</string>

    <string name="tx_submit">SUBMIT</string>
    <string name="tx_send_msg">Send Us A Message</string>
    <string name="tx_care_msg">We will get in touch with you as soon as possible</string>
    <string name="tx_helpline_number">Hepline Number</string>
    <string name="tx_grievance_category">Grievance category</string>
    <string name="tx_description">Describe your Grievance</string>
    <string name="tx_office_supplies">Office Supplies</string>
    <string name="tx_automotive_maintenance">Automotive Maintenance and Accessories</string>
    <string name="tx_power_tools">Power Tools</string>
    <string name="tx_pumps">Pumps</string>
    <string name="tx_safety">Safety</string>
    <string name="tx_cleaning">Cleaning</string>
    <string name="tx_agriculture_garden"><![CDATA[Agriculture Garden & Landscaping]]></string>
    <string name="tx_testing">Testing and Measuring Instruments</string>
    <string name="tx_solar">Solar</string>
    <string name="tx_electrical">Electrical</string>
    <string name="tx_medical"><![CDATA[Medical Supplies  & Equipment]]></string>
    <string name="tx_move_to_wish_list">MOVE TO WISHLIST</string>
    <string name="tx_in_stock">In stock</string>
    <string name="Please_login_to_the_application">Please Login to the application </string>
    <string name="add_to_wishList">MOVE TO WISHLIST</string>

    <string name="tx_proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="tx_cart_total">Cart Total</string>
    <string name="tx_mo_of_items">(5 items)</string>
    <string name="tx_delivery_estimate">Delivery Estimate:</string>
    <string name="tx_qty">Qty:</string>
    <string name="tx_qunty">Qty</string>

    <string name="tx_write_a_review">Write your review</string>
    <string name="tx_hint">Type your text here</string>
    <string name="tx_sub_category_data">Sub Category Data</string>
    <string name="tx_sub_chid_category_data">Sub child Category Data</string>
    <string name="tx_item_added">Item added</string>
    <string name="tx_add_to_cart">ADD TO CART</string>
    <string name="tx_remove">REMOVE</string>
    <string name="do_u_want_to_logout">Are you sure you want to logout?</string>
    <string name="tx_ok">OK</string>
    <string name="tx_password">Password</string>
    <string name="tx_confirm_password">Confirm Password</string>
    <string name="tx_update_profile">UPDATE PROFILE</string>
    <string name="tx_transaction_history">Transaction History</string>


    <!--Title-->
    <string name="notifications">Notifications</string>
    <string name="about_us">About Us</string>
    <string name="customer_care">Customer Care</string>
    <string name="shop_by_category">Shop by category</string>
    <string name="offer_and_deals">Offer &amp; Deals</string>
    <string name="my_cart">My Cart</string>
    <string name="payment">Select Payment Method</string>
    <string name="view_order_detail">View order detail </string>
    <string name="review">Write a review</string>
    <string name="product_details">Product Details</string>
    <string name="wish_list">My Wish list</string>
    <string name="my_profile">Profile</string>
    <string name="my_address">My Addresses</string>
    <string name="my_orders">My Orders</string>
    <string name="transaction_history">Transaction History</string>
    <string name="tx_filter_order">Filter Orders</string>
    <string name="txt_heb">HEB</string>
    <string name="txt_category">Groceries</string>
    <string name="office_supplies">Office Supplies</string>
    <string name="office_machine">Office Machine</string>
    <string name="office_stationary">Office Stationary</string>
    <string name="tx_product_sale">Products \n on sale</string>
    <string name="tx_filter">Filter</string>
    <string name="tx_apply_filter">Apply Filter</string>
    <string name="tx_sort_by">Sort By</string>
    <string name="tx_sort_by_with_forword_arrows">Sort By\t&gt;&gt;</string>
    <string name="tx_list">List</string>
    <string name="tx_relevance">Relevance</string>
    <string name="placed">Placed</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="featured">featured</string>
    <string name="products">Products</string>
    <string name="home">Home</string>
    <string name="offer_zone">Offer Zone</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_out">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="toolskart">ToolsKart</string>
    <string name="error_no_internet">Please check your internet connection!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="err_please_enter_valid_firstname">Please enter  fullname</string>
    <string name="err_please_enter_valid_email">Please enter valid email</string>
    <string name="err_please_enter_valid_mobile">Please enter valid mobile number</string>
    <string name="error_address">Please enter address</string>
    <string name="err_please_enter_valid_message">Please enter valid message</string>

    <string name="error_something_wrong">Whoops! Something went wrong here.</string>
    <string name="err_please_enter_otp">Please enter valid otp</string>
    <string name="msg_otp_resend_success">Otp resend successfully!!</string>
    <string name="tx_recent_items">Recent Items</string>


    <string name="Rs">\u20B9 </string>
    <string name="one_star">1 star</string>
    <string name="two_star">2 star</string>
    <string name="three_star">3 star</string>
    <string name="four_star">4 star</string>
    <string name="five_star">5 star</string>
    <string name="login">Login</string>
    <string name="go_to_cart">ADD TO CART</string>
    <string name="move_to_cart">GO TO CART</string>
    <string name="cannot_add_items_out_of_stock">You cannot add more than stock items.</string>
    <string name="should_be_minimum_quantity">There should be minimum quantity for this size is :=  .</string>
    <string name="do_you_want_to_cancel_order"> Are you sure you want to Cancel order?</string>
    <string name="et_enter_your_name">Please enter valid name</string>
    <string name="et_enter_your_mobile_number">Please Enter valid mobile number</string>
    <string name="et_enter_your_address">Please enter your Address</string>
    <string name="et_enter_your_pincode">Please enter pincode</string>
    <string name="address_updated_successfully">Address updated successfully</string>
    <string name="do_u_want_to_delete">Are you sure you want to delete this address?</string>
    <string name="address_added_successfully">Address added successfully</string>
    <string name="tx_card_num">Card Number</string>
    <string name="tx_name_on_card">Name on card</string>
    <string name="tx_expiry_date">Expiry Date</string>
    <string name="tx_security_code">Security code</string>
    <string name="tx_credit_or_debit_card">Credit/Debit card</string>
    <string name="tx_pay_now">PAY NOW</string>
    <string name="tx_net_banking">Net Banking</string>
    <string name="tx_cash_on_delivery">Cash On Delivery(COD)</string>
    <string name="no_of_reviews">(0)</string>

    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="category_data">category</string>
    <string name="pack_size">Pack Size</string>
    <string name="piece">piece</string>
</resources>
