<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_order_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimens_5"
    app:cardBackgroundColor="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimens_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/my_order_text_view_style"
                android:text="@string/tx_order_id" />

            <TextView style="@style/doted_text_view_style" />

            <TextView
                android:id="@+id/tv_order_id"
                style="@style/my_order_text_view_style"
                android:layout_weight="1"
                tools:text="@string/order_id" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_layout"
            android:layout_marginTop="@dimen/dimens_2"
            android:orientation="horizontal">
            <TextView
                style="@style/my_order_text_view_style"
                android:text="@string/tx_quantity" />

            <TextView style="@style/doted_text_view_style" />

            <TextView
                android:id="@+id/tv_quantity"
                style="@style/my_order_text_view_style"
                android:layout_weight="1"
                tools:text="@string/quantity" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_layout"
            android:layout_marginTop="@dimen/dimens_2"
            android:orientation="horizontal">
            <TextView
                style="@style/my_order_text_view_style"

                android:text="@string/tx_placed_on" />

            <TextView style="@style/doted_text_view_style" />

            <TextView
                android:id="@+id/tv_placed_date"
                style="@style/my_order_text_view_style"
                android:layout_weight="1"
                tools:text="@string/date" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_layout"
            android:layout_marginTop="@dimen/dimens_2"
            android:orientation="horizontal">
            <TextView
                style="@style/my_order_text_view_style"

                android:text="@string/tx_status" />

            <TextView style="@style/doted_text_view_style" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/my_order_text_view_style"
                android:layout_weight="1"
                tools:text="@string/status" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_layout"
            android:layout_marginTop="@dimen/dimens_2"
            android:orientation="horizontal">
            <TextView
                style="@style/my_order_text_view_style"
                android:text="@string/estimate_delivery"
               />

            <TextView
                style="@style/doted_text_view_style" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_estimated_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/date"
                    android:textColor="@color/colorDarkTextGrey"
                    android:textSize="@dimen/dimens_12sp" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimens_20"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/dimens_25"
                    android:background="@color/colorPrimary"
                    android:text="@string/tx_cancel" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>