<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimens_15">

    <android.support.v7.widget.AppCompatTextView
        style="@style/text_view_style"
        android:layout_marginTop="@dimen/dimens_3"
        android:text="@string/tx_name" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/ev_name"
        style="@style/edit_text_style" />

    <android.support.v7.widget.AppCompatTextView
        style="@style/text_view_style"
        android:text="@string/tx_phone_number" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/ed_mobile"
        style="@style/edit_text_style"
        android:inputType="number"
        android:maxLength="10"/>

    <android.support.v7.widget.AppCompatTextView
        style="@style/text_view_style"
        android:text="@string/tx_address" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/ed_address"
        style="@style/edit_text_style" />


    <android.support.v7.widget.AppCompatTextView
        style="@style/text_view_style"
        android:text="@string/tx_pin_code" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/ed_pincode"
        style="@style/edit_text_style"
        android:inputType="number" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_save"
        style="@style/buttons"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens_13"
        android:text="@string/tx_save" />

</LinearLayout>