<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_35"
        android:layout_above="@+id/login_layout"
        android:layout_marginBottom="@dimen/dimens_20"
        android:gravity="center"
        android:text="@string/toolskart"
        android:textSize="@dimen/dimens_25sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="@dimen/dimens_250"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_outline_curve"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_40"
            android:background="@drawable/bg_button_grey"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/dimens_13sp" />

                <View
                    android:id="@+id/view_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_3"
                    android:background="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/dimens_13sp" />

                <View
                    android:id="@+id/view_sign_out"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_3"
                    android:background="@color/colorPrimary"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_10"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_email"
                style="@style/login_edittext"
                android:hint="@string/email_mobile"
                android:text="kjm@gmail.com"
                android:inputType="textEmailAddress" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_get_otp"
                style="@style/buttons"
                android:layout_height="@dimen/dimens_35"
                android:layout_marginStart="@dimen/dimens_15"
                android:layout_marginTop="@dimen/dimens_15"
                android:layout_marginEnd="@dimen/dimens_15"
                android:layout_marginBottom="@dimen/dimens_5"
                android:text="@string/get_otp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_10"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_full_name"
                style="@style/login_edittext"
                android:hint="@string/full_name"
                android:inputType="text" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_email_reg"
                style="@style/login_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_mobile"
                style="@style/login_edittext"
                android:hint="@string/mobile"
                android:maxLength="10"
                android:inputType="number" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_next"
                style="@style/buttons"
                android:layout_height="@dimen/dimens_35"
                android:text="@string/next" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_sign_in_guest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimens_15"
                android:layout_marginTop="@dimen/dimens_10"
                android:layout_marginEnd="@dimen/dimens_15"
                android:gravity="center"
                android:text="@string/sign_in_as_guest"
                android:textSize="@dimen/dimens_12sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>