<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dimens_5"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardElevation="@dimen/dimens_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens_8"
        android:layout_marginRight="@dimen/dimens_8"
        android:layout_marginBottom="@dimen/dimens_8"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_customer_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimens_10"
            android:text="@string/tx_dummy_address"
            android:textSize="@dimen/dimens_15sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_delivery_address"
            android:layout_width="@dimen/dimens_180"
            android:layout_height="match_parent"
            android:maxLines="3"
            android:text="@string/dummy_explanation"
            android:textColor="@color/colorDarkTextGrey" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_delivery_to_address"
            style="@style/buttons"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimens_17"
            android:layout_marginEnd="@dimen/dimens_17"
            android:layout_marginTop="@dimen/dimens_13"
            android:text="@string/tx_deliver_to_this_address" />

        <LinearLayout
            android:layout_width="@dimen/dimens_240"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimens_13"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorGrey"
                android:text="@string/tx_edit" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimens_10"
                android:layout_weight="1"
                android:background="@color/colorGrey"
                android:text="@string/tx_delete" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>